# paperboy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  extract_paper.py  index_arxiv_bulk_files.py  paperboy  pyproject.toml  requirements.txt
AI notes/: START_HERE.md  TODO.md  USPTO_PLAN.md
docker/: Dockerfile  build.sh  docker-compose.yml
index/: import_kaggle_categories.py  import_kaggle_metadata.py  index_arxiv_bulk_files.py  index_uspto_bulk_files.py  sync_typesense.py
source/paperboy/: cache.py  config.py  ir.py  ir_cache.py  main.py  patent_retriever.py  retriever.py  search.py
