[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperboy"
version = "0.1.0"
description = "REST API for accessing arXiv papers from local archives"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Demitri Muna"}
]
keywords = ["arxiv", "api", "papers", "astronomy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "ruff>=0.1",
]
ir = [
    "arxiv-src-ir",  # IR package generation (requires LaTeXML on system)
]

[project.scripts]
paperboy = "paperboy.cli:main"

[project.urls]
Repository = "https://github.com/demitri/paperboy"

[tool.setuptools.packages.find]
where = ["source"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
